# evacbot

./: .gitignore  README.md  script.py
controllers/fire_animator/: fire_animator.py
controllers/main_controller/: README.md  const.py  main_controller.py  mavic.py  pathing.py  pyproject.toml  utils.py
controllers/mavic2pro/: mavic2pro.py
controllers/supervisor/: pyproject.toml  supervisor.py
protos/: Mavic2ProMod.proto
report/: main.tex
worlds/: cave.wbt  default.wbt  natural-cave-1.wbt  natural-cave-2.wbt  test_world_two.wbt  urban_1.wbt
