[project]
name = "evacbot"
version = "0.1.0"
description = "Controller program for our robot written in Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.basedpyright]
include = ["/usr/local/webots/lib/controller", "/usr/local/webots/lib/controller/python"]
extraPaths = ["/usr/local/webots/lib/controller", "/usr/local/webots/lib/controller/python"]
