[project]
name = "evacbot"
version = "0.1.0"
description = "Controller program for our robot written in Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
]

[tool.basedpyright]
include = ["/usr/local/webots/lib/controller", "/usr/local/webots/lib/controller/python"]
extraPaths = ["/usr/local/webots/lib/controller", "/usr/local/webots/lib/controller/python"]
reportUnusedCallResult = false
